feat: Update to new version & redux patterns.

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,95 +1,5 @@
 #app {
-
-  .btn-xs {
-    padding: .125rem .25rem;
-    font-size: .75rem;
-    line-height: 1;
-  }
-
-  .pagination {
-    .page-item {
-      text-align: center;
-    }
-  }
-  .debug {
-    display: none;
-
-    code {
-      white-space: pre;
-    }
-  }
-  .debugging .debug {
-    display: inherit;
-  }
-  .form-inline {
-    margin-bottom: 10px;
-    
-    label,
-    input,
-    select,
-    button {
-      margin-right: 5px;
-    }
-  }
-  ul.nav-tabs {
-    margin-bottom: 10px;
-  }
-  .userlist.table-responsive {
-    max-height: 750px;
-    @media screen and (max-width: 767px) {
-      max-height: 350px;
-      overflow-y: auto;
-    }
-  }
-
-  th.sortable {
-    cursor: pointer;
-    &.sorted {
-      color: #ffffff;
-      background-color: darken(#428bca, 6.5%);
-      &.desc {
-        background-color: #d9edf7;
-        color: darken(#428bca, 6.5%);
-      }
-    }
-  }
-
-  td.right {
-    text-align: right;
-  }
-
-  td.upc {
+  .table td.upc {
     white-space: nowrap;
   }
-
-  label {
-    input[type="checkbox"] {
-      margin-right: 10px;
-    }
-  }
-
-  button + button {
-    margin-left: 5px;
-  }
-
-  table {
-    thead.sticky {
-      position: sticky;
-      top: 0px;
-      background-color: rgba(225,225,225,0.9);
-
-    }
-    th,
-    td {
-      font-size: 12px;
-    }
-  }
-
-  textarea {
-    min-height: 150px;
-  }
-}
-
-.sku-item-list + .page-display {
-  display: block;
 }
